Update server to https://minecraft.azureedge.net/bin-linux/bedrock-server-1.17.40-06.zip

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       GAMEMODE: survival
       DIFFICULTY: hard
       MAX_PLAYERS: 50
+      VERSION: 1.17.40.06
       # Multi-Biome Spawn
       #LEVEL_SEED: -1266956775
       # Bamboo Forest
